{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 245,
  "lineage": "8b794097-c92a-0bbf-8d15-f49ec371af0a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0126e2ab380a3d4cf",
            "arn": "arn:aws:ec2:eu-central-1:452220760922:instance/i-0455118dd11152db4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0455118dd11152db4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansiblekeyster",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0623c9dc6ae3f9fba"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0623c9dc6ae3f9fba",
            "private_dns": "ip-10-0-1-154.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.154",
            "public_ip": "3.70.99.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-077f41729a9c4ab7f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0810f54cce54925ec",
            "tags": {
              "Name": "\u003creplace\u003e"
            },
            "tags_all": {
              "Name": "\u003creplace\u003e"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-001bc6ec852b62d73"
            ]
          },
          "dependencies": [
            "aws_network_interface.nic_az1",
            "aws_security_group.my_sg",
            "aws_subnet.subnet_az1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0126e2ab380a3d4cf",
            "arn": "arn:aws:ec2:eu-central-1:452220760922:instance/i-0dfd5896460ebfdb8",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dfd5896460ebfdb8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansiblekeyster",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-07144e97422e435e0"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07144e97422e435e0",
            "private_dns": "ip-10-0-2-97.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.97",
            "public_ip": "52.57.27.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-096423ea062fb13e3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00861449b9681d8cc",
            "tags": {
              "Name": "\u003creplace\u003e"
            },
            "tags_all": {
              "Name": "\u003creplace\u003e"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-001bc6ec852b62d73"
            ]
          },
          "dependencies": [
            "aws_network_interface.nic_az2",
            "aws_security_group.my_sg",
            "aws_subnet.subnet_az2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:452220760922:internet-gateway/igw-05d7bb7088a647672",
            "id": "igw-05d7bb7088a647672",
            "owner_id": "452220760922",
            "vpc_id": "vpc-0aa46e001b10e3fb8"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:loadbalancer/app/my-alb/82a70920847f2a91",
            "arn_suffix": "app/my-alb/82a70920847f2a91",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-1104830428.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:loadbalancer/app/my-alb/82a70920847f2a91",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-001bc6ec852b62d73"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00861449b9681d8cc"
              },
              {
                "subnet_id": "subnet-0810f54cce54925ec"
              }
            ],
            "subnets": [
              "subnet-00861449b9681d8cc",
              "subnet-0810f54cce54925ec"
            ],
            "vpc_id": "vpc-0aa46e001b10e3fb8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.my_sg",
            "aws_subnet.subnet_az1",
            "aws_subnet.subnet_az2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:listener/app/my-alb/82a70920847f2a91/1fa94f709313343f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:targetgroup/my-target-group/15b744a6cc13cf92",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:listener/app/my-alb/82a70920847f2a91/1fa94f709313343f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:loadbalancer/app/my-alb/82a70920847f2a91",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.my_alb",
            "aws_lb_target_group.my_target_group",
            "aws_security_group.my_sg",
            "aws_subnet.subnet_az1",
            "aws_subnet.subnet_az2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:targetgroup/my-target-group/15b744a6cc13cf92",
            "arn_suffix": "targetgroup/my-target-group/15b744a6cc13cf92",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:targetgroup/my-target-group/15b744a6cc13cf92",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0aa46e001b10e3fb8"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "my_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:targetgroup/my-target-group/15b744a6cc13cf92-20240119143510864800000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:targetgroup/my-target-group/15b744a6cc13cf92",
            "target_id": "i-0455118dd11152db4"
          },
          "dependencies": [
            "aws_instance.instance_az1",
            "aws_lb_target_group.my_target_group",
            "aws_network_interface.nic_az1",
            "aws_security_group.my_sg",
            "aws_subnet.subnet_az1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "my_target_group_attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:targetgroup/my-target-group/15b744a6cc13cf92-20240119143510811200000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:targetgroup/my-target-group/15b744a6cc13cf92",
            "target_id": "i-0dfd5896460ebfdb8"
          },
          "dependencies": [
            "aws_instance.instance_az2",
            "aws_lb_target_group.my_target_group",
            "aws_network_interface.nic_az2",
            "aws_security_group.my_sg",
            "aws_subnet.subnet_az2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nic_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:452220760922:network-interface/eni-0623c9dc6ae3f9fba",
            "attachment": [
              {
                "attachment_id": "eni-attach-004d92b7439f3f053",
                "device_index": 0,
                "instance": "i-0455118dd11152db4"
              }
            ],
            "id": "eni-0623c9dc6ae3f9fba",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:6c:98:e0:9c:d7",
            "owner_id": "452220760922",
            "private_ip": "10.0.1.154",
            "private_ip_list": [
              "10.0.1.154"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.154"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-001bc6ec852b62d73"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0810f54cce54925ec",
            "tags": {
              "Name": "\u003creplace\u003e"
            },
            "tags_all": {
              "Name": "\u003creplace\u003e"
            }
          },
          "dependencies": [
            "aws_security_group.my_sg",
            "aws_subnet.subnet_az1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nic_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:452220760922:network-interface/eni-07144e97422e435e0",
            "attachment": [
              {
                "attachment_id": "eni-attach-0104fbdc4083a1c9b",
                "device_index": 0,
                "instance": "i-0dfd5896460ebfdb8"
              }
            ],
            "id": "eni-07144e97422e435e0",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:2a:50:9d:bc:ab",
            "owner_id": "452220760922",
            "private_ip": "10.0.2.97",
            "private_ip_list": [
              "10.0.2.97"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.97"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-001bc6ec852b62d73"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00861449b9681d8cc",
            "tags": {
              "Name": "\u003creplace\u003e"
            },
            "tags_all": {
              "Name": "\u003creplace\u003e"
            }
          },
          "dependencies": [
            "aws_security_group.my_sg",
            "aws_subnet.subnet_az2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_subnet_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05d7bb7088a647672",
            "id": "r-rtb-07bc7b94efa39cdde1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07bc7b94efa39cdde",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_subnet_rt",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:452220760922:route-table/rtb-07bc7b94efa39cdde",
            "id": "rtb-07bc7b94efa39cdde",
            "owner_id": "452220760922",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05d7bb7088a647672",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0aa46e001b10e3fb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_az1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a94767312ac1a73f",
            "route_table_id": "rtb-07bc7b94efa39cdde",
            "subnet_id": "subnet-0810f54cce54925ec"
          },
          "dependencies": [
            "aws_route_table.public_subnet_rt",
            "aws_subnet.subnet_az1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_az2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08dd8072db4b4d6fb",
            "route_table_id": "rtb-07bc7b94efa39cdde",
            "subnet_id": "subnet-00861449b9681d8cc"
          },
          "dependencies": [
            "aws_route_table.public_subnet_rt",
            "aws_subnet.subnet_az2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:452220760922:security-group/sg-001bc6ec852b62d73",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001bc6ec852b62d73",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-sg",
            "name_prefix": "",
            "owner_id": "452220760922",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "\u003creplace\u003e"
            },
            "tags_all": {
              "Name": "\u003creplace\u003e"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa46e001b10e3fb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:452220760922:subnet/subnet-0810f54cce54925ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0810f54cce54925ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452220760922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0aa46e001b10e3fb8"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:452220760922:subnet/subnet-00861449b9681d8cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00861449b9681d8cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452220760922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0aa46e001b10e3fb8"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:452220760922:vpc/vpc-0aa46e001b10e3fb8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0628e4126a1396287",
            "default_route_table_id": "rtb-0b5b39652b5570193",
            "default_security_group_id": "sg-04183b09de730848c",
            "dhcp_options_id": "dopt-0efde61aedc62faef",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aa46e001b10e3fb8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b5b39652b5570193",
            "owner_id": "452220760922",
            "tags": {
              "Name": "\u003creplace\u003e"
            },
            "tags_all": {
              "Name": "\u003creplace\u003e"
            }
          }
        }
      ]
    }
  ]
}